[gd_scene load_steps=4 format=3 uid="uid://d4egdxsfsp6c"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_xvi88"]
[ext_resource type="Texture2D" uid="uid://kdclejpsorqs" path="res://resources/back_card.png" id="2_1jqso"]
[ext_resource type="Texture2D" uid="uid://b720bymqciwo" path="res://resources/front_card.png" id="3_mpymh"]

[node name="Card" type="Control"]
custom_minimum_size = Vector2(180, 240)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.5
offset_top = -120.5
offset_right = 89.5
offset_bottom = 119.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(91.5, 124.5)
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_xvi88")
back_texture = ExtResource("2_1jqso")

[node name="textFront" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mpymh")
expand_mode = 1
stretch_mode = 5

[node name="textCardImage" type="TextureRect" parent="textFront"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.139
anchor_top = 0.108
anchor_right = 0.861
anchor_bottom = 0.921
offset_left = -0.0200024
offset_top = 0.0799999
offset_right = 1.01999
offset_bottom = -3.04001
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5
flip_h = true
flip_v = true

[node name="textBack" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(90, 120.495)
texture = ExtResource("2_1jqso")
expand_mode = 1
stretch_mode = 5
